--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Last FM Test Task</title>
+    <style>
+      html, body {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+      }
+
+      #root,
+      .App {
+        height: inherit;
+      }
+    </style>
   </head>
   <body>
     <noscript>
